--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-native": "^4.3.0",
     "react-scripts": "1.1.1",
     "redux": "^4.0.0"
   },
